1999-06-01  Jim Kingdon  <http://www.cyclic.com>

	Make "cvs status -v" on a removed file work:
	* status.c (cvsstatus): Reindent the client code.
	(status_fileproc): Don't need a CVS/Entries listing to show the
	tags.
	* sanity.sh (rmadd2): New test rmadd2-16 tests the existing
	behavior with "cvs log"; new test rmadd2-17 tests the new behavior
	with "cvs status".

	* sanity.sh (basicc): To match no output in dotest, put the empty
	regexp first.  Remove tests which check that first-dir exists,
	since that isn't true in the case where the OS let us delete it.
	(dotest_internal): Fix so that things work with two regexps, with
	an empty one first.

1999-05-28  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (server-4): Replace bogus directory with real one since
	the server now checks it.

1999-05-27  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (spacefiles): Clean up -c, top, and -b at end.
	(spacefiles, files): Fix bad references to CVSROOT_DIRNAME.

	Fix two problems pointed out by Olaf Kirch of swb.de/caldera.de:
	* server.c (outside_root): New function, contains expanded version
	of code from serve_directory.
	(serve_directory): Call outside_root.
	(outside_dir): New function
	(serve_modified, serve_is_modified, serve_notify,
	serve_questionable, serve_unchanged): Call outside_dir.
	* sanity.sh (server2): New tests, for these fixes.

1999-05-26  Jim Kingdon  <http://www.cyclic.com>

	* cvs.h, subr.c (xmalloc): Return void* not char*, like xrealloc
	has done for some time.
	* modules.c (do_module): If we find the module as a directory/file
	(rather than in the modules file), skip a bunch of processing
	which was unnecessary and also broken in most of the cases
	now tested for by the spacefiles sanity.sh test.
	* sanity.sh (spacefiles): New test, for specifying filenames
	(containing spaces, or starting with '-', or starting with '/') to
	"cvs co".

1999-05-25  Jim Kingdon  <http://www.cyclic.com>
