@@ -13722,6 +13722,12 @@ EOF
 	  # features, which always seems to be problematic since then
 	  # someone feels like documenting them and things go downhill
 	  # from there).
+	  # 
+	  # Hmm, if this test is run on the 31st of the month, and 100
+	  # months from now is a month with only 30 days (e.g. run on
+	  # 31 May 1999), it seems to fail.
+	  # 
+	  # Sigh.
 	  if ${testcvs} -q update -p -D '100 months' file1 \
 	      >${TESTDIR}/rcs4.tmp 2>&1
 	  then
